[tool.poetry]
name = "sea-image-converter"
version = "0.1.0"
description = ""
authors = ["Shinya Ohtani"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "1.10.0"
torchvision = "0.11.1"
torchaudio = "0.10.0"
pytorch-lightning = "1.5.5"
wandb = "^0.12.7"
imageio = "^2.13.5"
opencv-python = "^4.5.5"
natsort = "^8.0.2"
scikit-image = "^0.19.1"
lpips = "^0.1.4"
timm = "^0.4.12"
pandas = "^1.3.5"
openpyxl = "^3.0.9"
omegaconf = "^2.1.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyterlab = "^3.2.5"
pysen = {version = "^0.10.1", extras = ["lint"]}
pysen-ls = "^0.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.10"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
mypy_preset = "strict"
line_length = 120
py_version = "py37"
[[tool.pysen.lint.mypy_targets]]
  paths = ["."]
